# gob

./: Cargo.toml  README.md  b.sh  gobbled.gob  install.sh
src/: displaypkginfdo.rs  extract.rs  getpkg.rs  main.rs  mk_symlink.rs  ndraey_dm_custom.rs  parse_pkg_index.rs  search.rs
