[package]
name = "gob"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
bzip2 = "0.5.1"
colored = "3.0.0"
comfy-table = "7.1.4"
dirs = "6.0.0"
enable-ansi-support = "0.2.1"
flate2 = "1.0.35"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
indicatif = "0.17.11"
libc = "0.2.169"
ndraey_downloader = "0.1.7"
rayon = "1.10.0"
reqwest = "0.11.0"
sys-info = "0.9.1"
tar = "0.4.43"
tempfile = "3.17.1"
tokio = { version = "1.0", features = ["full"] }
users = "0.11.0"
xz2 = "0.1.7"
zip = "2.2.2"
