[package]
name = "gob"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = "0.5.1"
colored = "3.0.0"
dirs = "6.0.0"
enable-ansi-support = "0.2.1"
flate2 = "1.0.35"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
libc = "0.2.169"
reqwest = { version = "0.12.12", features = ["rustls-tls","stream"] }
sys-info = "0.9.1"
tar = "0.4.43"
tokio = { version = "1.0", features = ["full"] }
xz2 = "0.1.7"
zip = "2.2.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
incremental = true
